--- a/localisation/KR_Shang_Hai_l_simp_chinese.yml
+++ b/localisation/KR_Shang_Hai_l_simp_chinese.yml
@@ -1043,12 +1043,18 @@
  LEC_hua_lang_ting_sec_desc: "§Y生于：§!§L1880年12月11日；法国、卢瓦尔省福雷地区于松§!\n§Y背景：§!§L皮埃尔·西尔万·瓦伦丁出生于卢瓦尔河畔于松市的一个小村庄。他的父母是来自福雷兹的淳朴农民，忠实于自己的信仰和传统，恪守宗教义务。他早年便加入巴黎外方传教会，1904年2月27日领受辅祭职，同年6月26日晋铎。随后，华朗廷立刻被派往中国传教。1904年底，抵达四川省四川藏区打箭炉。经过一段时间的汉语学习，他被倪德隆主教安排负责停滞不前的拉丁修院，通过耐心，瓦伦丁神父成功地将他的权威强加给住在主教管区附属建筑中的十五名神学院学生。虽然过程中并非一帆风顺，但也经历了许多困难和挫折，但在1911年，他获得了努力的第一个回报：文森特·李(VincentLy)神父的祝圣，李神父来到神学院为他提供了宝贵的帮助。1911年，在辛亥革命期间，华朗廷等传教士受到叛军威胁，需要徒步走了四天撤离离开打箭炉。翌年4月才能回到打箭炉，并扩建拉丁修院。1913年，他被任命为主教助手，出任盐井圣心圣母堂和茨中圣心堂的主任司铎。任内，华朗廷和其他传教士学习藏语。他曾免于1913年在当地爆发的鼠疫，却感染1919年至1920年间爆发的斑疹伤寒。1920年9月，他回到打箭炉。1926年11月11日，华朗廷被时任教宗庇护十一世任命为打箭炉宗座代牧区辅理主教，辅助宗座代牧倪德隆主教。翌年8月7日，在成都由骆书雅主教祝圣晋牧。1930年，华朗廷还兼任打箭炉代牧区云南铎区总司铎，驻扎云南省德钦县茨中教堂。出任总司铎期间，他开办孤儿院和医院，并在村庄中培训教义问答。他建造了一座供奉圣母玛利亚的小堂，又开设麻风病院，委托给方济各会。1930年，他把维西修院交由来自大圣伯纳德山口的奥斯定常律会会士管理。如今，倪德隆主教年事已高，华朗廷神父将随时准备接任打箭炉宗座代牧区宗座代牧。§!"
  LEC_shi_ai_le_sec: "石爱乐"
  LEC_shi_ai_le_sec_desc: "§Y生于：§!§L1906年8月20日；美国、宾夕法尼亚州联合城§!\n§Y背景：§!§L石爱乐（Otto F. Schoerner）其父母是德国移民，1920年代在宾州管家镇经营面包店。石爱乐年少时就参加了圣马可路德宗教会的少年团，并在一位敬虔的基督徒陶镘先生指导下研读圣经。石爱乐16岁时随父在店中学作面包师，但没多久父亲在一起在车祸中不幸丧生。此后，石爱乐和家人继续经营面包店，赖此维持生计。在信仰上，陶镘成了石爱乐的教父。除了在主日学里教导他外，还经常指导他阅读释经书和宣教士的传记。在几年时间里，石爱乐完成了全部司可福圣经函授课程，并常常参加各种教会的退修会和培灵会。1927年，石爱乐进入慕迪圣经学院学习。在神学院期间，有两件事对他影响甚大：第一，在1929年，内地会呼吁200名宣教士到中国，他欣然接受了这个挑战；第二，他读过《忠心的管家》一书，深受感动，立志到中国西北向回教徒传福音。1931年10月1日，石爱乐作为内地会宣教士，乘船从加拿大温哥华启程前往中国。10月22日到上海后，随即赴安徽安庆的语言学校接受训练，约六个月后通过了中文第一级考试。然后和另外五位青年宣教士一起被分派到新疆迪化。这五位分别是英国的巴富义医生、赵立德教士、何仁志教士、朱佩儒教士、和澳洲的柏爱生教士。1932年9月13日，他们开着两辆福特货运车从张家口出发，穿过长城进入内蒙古，向新疆进发。一路上他们各有分工，曾做过面包师的石爱乐负责七个人的伙食。1932年11月9日，他们历尽千辛万苦，终于抵达迪化，全程共57天。抵达时正值回民叛乱，到处战火纷飞。由于道路交通受阻，邮件常被阻断，他们寄往国外的二十几个邮包也毁于战火。乱定之后，石爱乐和赵立德教士被分派到迪化以东150英里的古城工作。1934年4月，石爱乐和赵立德借医病的机会与汉人和少数民族接触，向他们传福音。他们每天早上以两小时治病，在一个月内竟有300多位病人前来求诊，使他们应接不暇。到了夏季，求诊者逾千，很快他们就与整个地区的人相熟了。他们见时机成熟，就于每礼拜日在他们的客厅开始礼拜。1935年，石、赵二人开始到城里大街上借用不同地方，在礼拜日下午公开聚会。同年圣诞节，在奇台有十多位信徒聚会见证主的恩典，见证主如何改变他们，使他们成为新造的人，二人听了很得安慰。他们亦利用春节农闲时到附近农村传福音。是年冬，石、赵二人都通过了六级中文考试，接着，他们又开始学习其它民族语言，以便传福音。§!"
+ LEC_San_Francisco_eco: "伊望主教"
+ LEC_San_Francisco_eco_desc: "§Y生于：§!§L1896年6月4日；俄罗斯帝国、哈尔科夫省阿达莫弗卡村§!\n§Y背景：§!§L伊望主教，俗名米哈伊尔·鲍里索维奇·马克西莫维奇。1896年6月4日出生于俄国南部哈尔科夫省阿达莫弗卡村，虔诚信仰东正教的贵族家庭，渊源于塞尔维亚，与18世纪圣人托博尔斯克的圣伊望都主教属于同一家族。从1907年到1914年，米哈伊尔·鲍里索维奇·马克西莫维奇就读于波尔塔瓦士官武备学校，1918年毕业于哈尔科夫皇家大学法律系，随后就职于哈尔科夫地方法院。米哈伊尔在年轻时信仰颇为虔诚，他的精神导师是哈尔科夫总主教安托尼。他原本打算进入基辅神学院，但在在父母的坚持下改读法律。十月革命后，米哈伊尔·马克西莫维奇一家流亡君士坦丁堡，在白军胜利，其父母返回家乡，米哈伊尔前往贝尔格莱德。1925年，米哈伊尔毕业于贝尔格莱德大学，获得神学学位。1924年，马克西莫维奇代表当时的俄罗斯东正教国外教会领袖安东尼都主教，起草了一份关于俄罗斯继承权起源的报告，探讨的问题是，法律如何符合俄罗斯人民的精神和历史传统。1926年，米哈伊尔·马克西莫维奇剃度成为一名修士，法名伊望，并由基辅都主教安托尼祝圣为辅祭。1934年，前任上海主教西蒙主教因病去世后，伊望主教被分配到上海担任主教，他接手并完成了罪人之保障圣母主教座堂的建设。\n\n在中国时，伊望主教被称为慈善家，他迅速介入已有的慈善机构，成为各种慈善事业协会的董事，并为贫穷家庭的儿童创办了以扎东斯克的圣吉洪命名的孤儿院。圣吉洪孤儿院最初只有8个孩子，后来达到数百人，前后合计总数共计有3500人。§!"
 
  LEC_shang_hai_qi_shi_tuan_tooltip: "§Y我就观看，见有一匹白马；骑在马上的，拿着弓，并有冠冕赐给他。他便出来，胜了又要胜。§!"
+ SHC_Religion_orthodox_tt: "§Y你需要在哈尔滨完成传教工作。§!"
+ SHC_Religion_catholicism_tt: "§Y你需要在上海完成传教工作。§!"
+ SHC_Religion_nestorian_tt: "§Y你需要在洛阳完成传教工作。§!"
  SHC_china_jiao_hua_country_time_tt: "£decision_icon_small §H在部分省份传教§!的花费减少 £pol_power 20，传教时间减少20天。"
  SHC_china_jiao_hua_country_time_huge_tt: "£decision_icon_small §H在边疆省份传教§!的花费减少 £pol_power 20，传教时间减少20天。"
  SHC_china_jiao_hua_country_middle_time_tt: "生效时 £decision_icon_small §H在部分省份传教§!的花费减少 £pol_power 20。"
  SHC_china_jiao_hua_country_huge_time_tt: "生效时 £decision_icon_small §H在部分省份传教§!的花费减少 £pol_power 20。"
+ SHC_mi_sha_flag: "我们正在举行一场弥撒"
 
  SHC_Hui_Ji_liang: "惠济良"
  POLITICS_HUI_JI_LIANG_DESC:0 "惠济良主教是一位法国罗马天主教耶稣会会士。1877年10月1日，惠济良出生于法国布列塔尼地区的埃物朗（Évran），1896年入耶稣会修道。1903年前往中国上海徐家汇，继续攻读哲学、神学。1910年6月10日祝圣为耶稣会神父，此后先后在浦东、海门等地传教，任震旦大学法语教师，以及徐家汇修院院长。1928年6月25日，罗马教廷任命惠济良为南京宗座代牧区辅理主教，10月3日，由天主教献县教区主教、耶稣会士刘钦明祝圣，天主教烟台教区主教罗汉光、天主教宁波教区主教戴安德襄礼。1931年5月13日，姚宗李主教去世，惠济良接任南京代牧区主教一职。1933年12月13日，教宗庇护十一世将南京代牧区分为南京和上海2个代牧区，惠济良留在上海，继续担任上海代牧区主教；无锡以西划给南京代牧区，主教为于斌。"
@@ -1081,22 +1087,23 @@
  LEC_you_de_zhi_ren:0 "有德之人"
  LEC_for_the_god_state:0 "天主赐福之地"
  LEC_for_the_god_orthodox_state:0 "天主赐福之地"
+ LEC_for_the_god_nestorian_state:0 "天主赐福之地"
+ LEC_orthodox_church_state:0 "罪人之保障圣母主教座堂"
  LEC_for_the_god_state_2:0 "新耶路撒冷"
  SHC_the_war_for_the_god:0 "十字军西征"
 
  SHC_jiao_hui_for_all:0 "传播主的福音"
  SHC_jiao_hui_for_all_desc:0 "天主的爱如同阳光，普照每一个灵魂。祂创造了你，以无限的慈悲呼唤你的名字。无论过去的伤痕或迷茫，祂始终等待你归向祂的怀抱。耶稣基督——天父的独生子——为救赎我们而牺牲，以复活战胜死亡，赐予我们永生的希望。教会是祂在世间的家，我们邀请你一同分享这份恩典：在圣事中遇见祂的临在，在祈祷中聆听祂的声音，在爱德中活出真理。你的生命是宝贵的，天主的计划远超你的想象。愿圣神点燃你心中的渴望，愿玛利亚——众人的母亲——为你代祷。请鼓起勇气，迈出信德的一步。我们在这里，与你同行。\n\n“天主竟这样爱了世界，甚至赐下了自己的独生子，使凡信祂的人不至丧亡，反而获得永生。”（若望福音3:16）\n\n愿平安与喜乐常驻你心，直到永远。阿们。" 
+ SHC_Religion_orthodox_decision:0 "以正教礼仪举行弥撒"
+ SHC_Religion_orthodox_decision_desc:0 "东方正统基督教是基督教的正统分支之一，在1054年东西教会大分裂与公教走向不同的道路。而对中国历史而言，正教主要由俄罗斯人在清朝时期与中国的接触而传入中国，这主要集中于蒙古地区、新疆地区与东北地区，但相对于公教而言，正教的传播微乎其微。如今，我们重新修缮位于哈尔滨的圣索菲亚教堂与在上海混乱期间遭到破坏的罪人之保障圣母主教座堂，并在正教的伊望主教的主持下，举行正教的弥撒仪式。\n\n不同于西方教会常用的拉丁十字，正教会十字有三个横杠，最上头的横杠代表耶稣钉十字架时加在其上的罪状牌。最底下的则代表踏脚用的横木。在俄罗斯正教会的传统中踏脚木会被画成左高右低，这代表着耶稣被钉十字架时的右盗与左盗二者的优劣。在新约圣经的记载中，有两个盗贼与耶稣同时被钉在十字架上，其中一个嘲笑耶稣另一个则谦卑的请耶稣日后记得他。" 
+ SHC_Religion_catholicism_decision:0 "以公教礼仪举行弥撒"
+ SHC_Religion_catholicism_decision_desc:0 "愿天父的慈爱，基督的圣宠，圣神的恩赐与我们同在。愿天父和基督，赐给我们恩宠及平安。我向全能的天主和各位教友，承认我思、言、行为上的过失。(搥胸)我罪，我罪，我的重罪。为此，恳请终身童贞圣母玛利亚、天使、圣人、和你们各位教友，为我祈求上主、我们的天主。愿全能的天主垂怜我们，赦免我们的罪，使我们得到永生。阿们。上主，求祢垂怜。基督，求祢垂怜。天主在天受光荣，主爱的人在世享平安。主、天主、天上的君王、全能的天主圣父，我们为了祢无上的光荣，赞美祢、称颂祢、朝拜祢、显扬祢、感谢祢。主、耶稣基督、独生子；主、天主、主天的羔羊，圣父之子；除免世罪者，求祢垂怜我们。除免世罪者，求祢俯听我们的祈祷。坐在圣父之右者，求祢垂怜我们；因为只有祢是圣的，只有祢是主，只有祢是至高无上的。耶稣基督，祢和圣神，同享天主圣父的光荣，阿们。\n\n公教中常使用拉丁十字。它由长短两条梁组成。其中竖着的那根要长于横着的那根。竖着的那一根象征着上帝的国度，横着的那一根象征着人间，两根相交象征着天国与人间的统一。"
+ SHC_Religion_nestorian_decision:0 "以景教礼仪举行弥撒"
+ SHC_Religion_nestorian_decision_desc:0 "景教起源于聂斯脱里派，该教派在宗教改革前，他们一度被定义为异端，这也是他们向东发展，且被称为东方教会，主要在叙利亚、波斯等地发展的愿意。聂斯脱里派在公元6世纪前后传入中国，并在唐朝时期达到顶峰，但在后续并没有如他们所愿的将中国改造成基督教国家，反而在宋元时期走入末路，并最终伴随着公教和新教的二次传入而被彻底取代，如今我们将在唐朝古都洛阳，以东方教会的礼仪举行一次弥撒仪式，去哀悼那些先行者们的付出，如今教宗正在与东方教会大公长宗主教重新接触，也许不久以后我们之间的分歧就将弥合，毕竟无论如何，我们都是祂的孩子。\n\n景教十字同样源于聂斯脱里十字，后者也被称为波斯十字，在外形上景教十字类似马耳他十字，十字架横臂的左右两侧边各有三珠装饰，顶部装饰两珠，底部则只有一珠，这九颗珠象征教会内的九级事工。顶部两珠之间饰有王冠，王冠的三个尖头象征三位一体。同时又吸收了东亚的艺术风格更受到了来自佛教和道教的影响，在十字架的下方常常有一朵莲花，莲花两侧以祥云衬托，祥云左右又加刻花束。在后期的发展中，景教十字已不再有九珠和王冠等装饰，但保留了莲台和祥云。"
  SHC_jiao_hui_for_all_small:0 "在[FROM.GetName]传播主的福音"
  SHC_jiao_hui_for_all_middle:0 "在[FROM.GetName]传播主的福音"
  SHC_jiao_hui_for_all_large:0 "在[FROM.GetName]传播主的福音"
  SHC_jiao_hui_for_all_huge:0 "在[FROM.GetName]传播主的福音"
-
- SHC_zhu_sheng_shi_zi:0 "祝圣十字"
- SHC_zhu_sheng_shi_zi_desc:0 " "
- SHC_Religion_nestorian_tooltip:0 " "
- SHC_Religion_catholicism_tooltip:0 " "
- SHC_Religion_orthodox_tooltip:0 " "
- SHC_Religion_coptic_tooltip:0 " "
 
  LEC_shang_di_de_huai_bao:0 "终回主的怀抱"
  LEC_shang_di_de_huai_bao_desc:0 "在上海陷入混乱之际，主的牧师们不忍心上海市民陷入苦难，于是伸出了援手，如今上海终于得到了救赎" 
