--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -2311,16 +2311,28 @@
  HNN_wu_dou:0 "鼓动武斗"
  HNN_jia_da_xuan_chuan:0 "加大宣传"
 
+ HNN_tu_di_gai_ge_category:0 "土地改革"
+ HNN_tu_di_gai_ge_category_desc:0 "新中国已经成立，为了实现我们最初许下的承诺，[HNN.GetLeader]主席将发动全面的土地改革，以实现§R“耕者有其田”§!的梦想。但是保守势力是如此强势，我们必须快速高效的完成土地改革。\n\n§g若想获得效果最好的民族精神，土地改革得分便需要达到90。高于90的土地改革得分每分可转换为5点政治点数。同时如果土地改革分数过低将触发不可避免的后果......"
+ HNN_tu_di_gai_ge_text_morale:0 "当前§Y土地改革进度§!：[GetHNN_tu_di_gai_ge]（[?HNN_tu_gai]）"
+ HNN_agrarian_socialism_tooltip:0 "农民问题乃国民革命的中心问题，农民不起来参加并拥护国民革命，国民革命不会成功；农民运动不赶速地做起来，农民问题不会解决；农民问题不在现在的革命运动中得到相当的解决，农民不会拥护这个革命。——这些道理，一直到现在，即使在革命党里面，还有许多人不明白。他们不明白经济落后之半殖民地革命最大的对象是乡村宗法封建阶级(地主阶级)。经济落后之半殖民地，外而帝国主义内而统治阶级，对于其地压迫榨取的对象主要是农民，求所以实现其压迫与榨取，则全靠那封建地主阶级给他们以死力的拥护，否则无法行其压榨。所以经济落后之半殖民地的农村封建阶级，乃其国内统治阶级国外帝国主义之唯一坚实的基础，不动摇这个基础，便万万不能动摇这个基础的上层建筑物。"
+
  HNN_tao_yuan:0 "桃园经验"
  HNN_tu_gai_jie_shu:0 "§Y土改结束§!"
- HNN_increase_opium_profit_1:0 "土地改革进度增加§G1§!"
- HNN_increase_opium_profit_2:0 "土地改革进度增加§G2§!"
- HNN_increase_opium_profit_3:0 "土地改革进度增加§G3§!"
- HNN_increase_opium_profit_4:0 "土地改革进度增加§G4§!"
- HNN_increase_opium_profit_5:0 "土地改革进度增加§G5§!"
- HNN_increase_opium_profit_6:0 "土地改革进度增加§G6§!"
- HNN_increase_opium_profit_7:0 "土地改革进度增加§G7§!"
- HNN_increase_opium_profit_8:0 "土地改革进度增加§G8§!"
+ GetHNN_tu_di_gai_ge00:0 "§R初步启动§!"
+ GetHNN_tu_di_gai_ge15:0 "§R缓步推进§!"
+ GetHNN_tu_di_gai_ge30:0 "§Y全面展开§!"
+ GetHNN_tu_di_gai_ge45:0 "§Y加速推进§!"
+ GetHNN_tu_di_gai_ge60:0 "§G略有成效§!"
+ GetHNN_tu_di_gai_ge75:0 "§M收尾完善§!"
+ GetHNN_tu_di_gai_ge89:0 "§M圆满完成§!"
+ HNN_increase_opium_profit_1:0 "§Y土地改革进度§!增加§G1§!"
+ HNN_increase_opium_profit_2:0 "§Y土地改革进度§!增加§G2§!"
+ HNN_increase_opium_profit_3:0 "§Y土地改革进度§!增加§G3§!"
+ HNN_increase_opium_profit_4:0 "§Y土地改革进度§!增加§G4§!"
+ HNN_increase_opium_profit_5:0 "§Y土地改革进度§!增加§G5§!"
+ HNN_increase_opium_profit_6:0 "§Y土地改革进度§!增加§G6§!"
+ HNN_increase_opium_profit_7:0 "§Y土地改革进度§!增加§G7§!"
+ HNN_increase_opium_profit_8:0 "§Y土地改革进度§!增加§G8§!"
  HNN_tu_di_kai_fa_tooltip:0 "解锁§Y土地改革§!决议£GFX_decision_icon_small §G§!§Y土地开发§!"
  HNN_san_fan_tooltip:0 "解锁决议£GFX_decision_icon_small §G§!§Y反腐败§!"
  HNN_si_qing_tooltip:0 "解锁决议£GFX_decision_icon_small §G§!§Y清查仓库§!"
@@ -2329,8 +2341,7 @@
  HNN_chi_jiao_tooltip:0 "解锁决议£GFX_decision_icon_small §G§!§Y训练赤脚医生§!"
  HNN_tu_di_gai_ge_1:0 "§G这将有效提高土地改革进度，并将根据现有土地改革进度给予不同的工厂数§!"
  HNN_you_xiao:0 "§G这将有效提高土地改革进度§!"
- HNN_tu_di_gai_ge_category:0 "土地改革"
- HNN_tu_di_gai_ge_category_desc:0 "新中国已经成立，为了实现我们最初许下的承诺，[HNN.GetLeader]主席将发动全面的土地改革，以实现§R“耕者有其田”§!的梦想。但是保守势力是如此强势，我们必须快速高效的完成土地改革。\n\n§g若想获得效果最好的民族精神，土地改革得分便需要达到90。高于90的土地改革得分每分可转换为5点政治点数。同时如果土地改革分数过低将触发不可避免的后果......§!\n\n§C目前的土地改革进度§!：[?HNN_tu_gai]"
+
  HNN_tu_gai:0 "分配土地"
  HNN_tu_gai_desc:0 "打倒地主，平均土地！\n\n§g不同的领导人会有不同的效果§!"
  HNN_bao_hu_ping_nong:0 "保护失地农民"
@@ -2349,8 +2360,9 @@
  HNN_tu_gai_jie_su:0 "宣布土地改革结束"
  HNN_Agricultural_Crisis_deadline:0 "土地改革倒计时"
  HNN_bu_tie_nong_ye:0 "补贴农业"
- HNN_bu_tie_nong_ye_desc:0 "为了促使有地农民更好的耕种，我们将补给农民。"
+ HNN_bu_tie_nong_ye_desc:0 "为了促使有地农民更好的耕种，我们将补贴农业生产，让农民放心大胆的扩种。"
  HNN_yin_jin_xin_zuo_wu:0 "引进新作物"
+ HNN_yin_jin_xin_zuo_wu_desc:0 "农作物的产量的决定条件是多样的，有土壤、气候、种植技术等等，但是无论如何离不开的一环是种子本身。我们需要引进一些产量更高更优良的种子来提高作物的产量。"
  HNN_kuo_jian_tuo_la_ji:0 "扩建拖拉机厂"
  HNN_chi_jiao_yi_sheng:0 "训练赤脚医生"
  HNN_chi_jiao_yi_sheng_desc:0 "亦农亦医，农忙时务农，农闲时行医，白天务农，晚上行医"
