--- a/localisation/KR_Shang_Hai_l_simp_chinese.yml
+++ b/localisation/KR_Shang_Hai_l_simp_chinese.yml
@@ -1357,12 +1357,14 @@
 
  SHC_sheng_gong_hui_de_jue_qi:0 "圣公宗的崛起"
  SHC_sheng_gong_hui_de_jue_qi_desc:0 " " 
- SHC_yi_shou_sheng_jing_yi_shou_jing_shu:0 "一手圣经，一手报纸"
- SHC_yi_shou_sheng_jing_yi_shou_jing_shu_desc:0 " " 
- SHC_bang_zu_you_xu_yao_de_ern:0 "帮助有需要的人"
- SHC_bang_zu_you_xu_yao_de_ern_desc:0 " " 
- SHC_qi_shi_bu_zai:0 "歧视不再"
+ SHC_yi_shou_sheng_jing_yi_shou_jing_shu:0 "一手圣经，一手报刊"
+ SHC_yi_shou_sheng_jing_yi_shou_jing_shu_desc:0 " "
+ SHC_qi_shi_bu_zai:0 "破除偶像之城"
  SHC_qi_shi_bu_zai_desc:0 " " 
+ SHC_xing_yang_yu_lang_zhi:0 "信仰与良知的共同体"
+ SHC_xing_yang_yu_lang_zhi_desc:0 " " 
+ SHC_bang_zu_you_xu_yao_de_ern:0 "宽恕他人之恶"
+ SHC_bang_zu_you_xu_yao_de_ern_desc:0 " "
  SHC_zai_xing_dong_zhong_jian_zheng:0 "以行动体现信仰"
  SHC_zai_xing_dong_zhong_jian_zheng_desc:0 " " 
  SHC_geng_jia_mei_hao_de_she_hui:0 "怜悯人的人有福了"
@@ -1372,11 +1374,13 @@
  SHC_wei_si_li_zong_de_jue_qi_desc:0 " " 
  SHC_jie_fang_fu_nv:0 "解放女性"
  SHC_jie_fang_fu_nv_desc:0 " " 
- SHC_er_tong_jiao_yu:0 "儿童教育"
+ SHC_er_tong_jiao_yu:0 "普及主日学校教育"
  SHC_er_tong_jiao_yu_desc:0 " " 
+ SHC_she_li_gong_ren_tuan_qi:0 "设立工人福音团契"
+ SHC_she_li_gong_ren_tuan_qi_desc:0 " " 
  SHC_ti_mian_de_lao_dong_zhe:0 "勤劳总有回报"
  SHC_ti_mian_de_lao_dong_zhe_desc:0 " " 
- SHC_bao_wei_ji_sjhi:0 "让农民挺起腰杆"
+ SHC_bao_wei_ji_sjhi:0 "整顿市政与警纪"
  SHC_bao_wei_ji_sjhi_desc:0 " " 
  SHC_geng_jia_gong_ping_de_she_hui:0 "温柔的人有福了"
  SHC_geng_jia_gong_ping_de_she_hui_desc:0 " " 
