--- a/localisation/KR_game_rules_l_simp_chinese.yml
+++ b/localisation/KR_game_rules_l_simp_chinese.yml
@@ -386,7 +386,7 @@
  RULE_OPTION_TEX_POST_CIVIL_WAR_LONG_DESC:0 "休伊·朗在清洗其昔日“盟友”的过程中设法保住了自己的权力。\n§R需要：§!\n§C美利坚联盟国赢得第二次美国内战§!"
  RULE_OPTION_TEX_POST_CIVIL_WAR_MOSELEY:0 "£KR_game_rule_flag_USA 莫斯利掌权"
  RULE_OPTION_TEX_POST_CIVIL_WAR_MOSELEY_DESC:0 "休伊·朗意外失踪后，美国退伍军人协会总指挥乔治·范·霍恩·莫斯利宣布他将接管国家政权，直到一位更为合适的领导人现身为止。\n§R需要：§!\n§C美利坚联盟国赢得第二次美国内战§!"
- RULE_OPTION_TEX_POST_CIVIL_WAR_PELLEY:0 "£KR_game_rule_flag_TEX_commonwealth 佩利发动了一次成功的政变"
+ RULE_OPTION_TEX_POST_CIVIL_WAR_PELLEY:0 "£KR_game_rule_flag_TEX_commonwealth 佩利政变"
  RULE_OPTION_TEX_POST_CIVIL_WAR_PELLEY_DESC:0 "在总统亲信的帮助下，威廉·达德利·佩利及其属下的银色军团发起了一场成功的政变。新政权遵循着以前被边缘化的基督教民族主义意识形态。\n§R需要：§!\n§C美利坚联盟国赢得第二次美国内战§!"
  MEX_POST_ASSASSINATION:0 "£KR_game_rule_flag_MEX_syndicalist 谋杀萨帕塔的企图"
  RULE_OPTION_MEX_POST_ASSASSINATION_RANDOM:0 "默认"
@@ -1193,7 +1193,7 @@
  RULE_OPTION_ARM_PATH_TOTALIST_DESC:0 "$RULE_OPTION_ARM_PATH_DEM$革命派在选举中以压倒性的优势取胜，阿纳斯塔斯·米高扬的§V亚美尼亚共产党§!在首届亚美尼亚人民大会中胜选。"
  ARM_FORPOL:0 "£KR_game_rule_flag_ARM 亚美尼亚外交政策"
  RULE_OPTION_ARM_FORPOL_RANDOM:0 "默认"
- RULE_OPTION_ARM_FORPOL_RANDOM_DESC:0 "独立后的亚美尼亚脆弱到了一触即溃的地步，或许他们应该考虑加入一个大点的军事集团了。"
+ RULE_OPTION_ARM_FORPOL_RANDOM_DESC:0 "独立后的亚美尼亚脆弱不堪，最好的出路便是加入一军事集团。"
  RULE_OPTION_ARM_FORPOL_GER:0 "£KR_game_rule_flag_ARM £KR_game_rule_flag_GER 帝国公约"
  RULE_OPTION_ARM_FORPOL_GER_DESC:0 "只有德意志帝国才有能力保护亚美尼亚免遭俄罗斯侵略。\n\n§R需要：§!\n§R没有§!在§Y$ARM_PATH$§!中选择§C明确采克哈龙主义§!或任何§C革命派§!路线"
  RULE_OPTION_ARM_FORPOL_RUS:0 "£KR_game_rule_flag_ARM £KR_game_rule_flag_RUS 莫斯科协约"
@@ -1329,7 +1329,7 @@
  RULE_OPTION_IRE_FUTURE_DEMOCRACY_SOCCON_DESC: "由埃蒙·德·瓦莱拉领导的社会保守主义的§c共和党§!在选举中击败了柯林斯和统一党。在爱尔兰君主制的问题被提出时，德·瓦莱拉总统决定维持共和主义。"
  RULE_OPTION_IRE_FUTURE_MONARCHY: "£KR_game_rule_flag_IRE_kingdom 爱尔兰君主制"
  RULE_OPTION_IRE_FUTURE_MONARCHY_DESC: "由埃蒙·德·瓦莱拉领导的社会保守主义的§c共和党§!在选举中击败了柯林斯和统一党。在爱尔兰君主制的问题被提出时，德·瓦莱拉总统决定重建君主制并加冕一位新的至高王。"
- RULE_OPTION_BRG_SARK_BOOBA:0 "£KR_game_rule_flag_NRM_paternal_autocrat 哈撒韦家族 - 玛丽三世"
+ RULE_OPTION_BRG_SARK_BOOBA:0 "£KR_game_rule_flag_BRG_kingdom12 哈撒韦家族 - 玛丽三世"
  RULE_OPTION_BRG_SARK_BOOBA_DESC:0 "在决定加冕新的王朝以取代温莎叛徒后，珀西·霍巴特选择了萨克女爵西比尔·哈撒韦，将其加冕为玛丽三世。"
  IRE_MONARCH:0 "£KR_game_rule_flag_IRE_kingdom 爱尔兰之君"
  RULE_OPTION_IRE_MONARCH_RANDOM:0 "£KR_game_rule_flag_IRE_kingdom 默认"
