--- a/localisation/KX_Guides_gui_l_simp_chinese.yml
+++ b/localisation/KX_Guides_gui_l_simp_chinese.yml
@@ -179,7 +179,7 @@
  guides.31.a:0 "哇哦"
  guides.31.b:0 "返回"
  guides.32.t:0 "联合工团指南"
- guides.32.d:0 "问：卡彭的联合工团？\n\n答：内战期间，接受卡彭的支援。战后选举极权人上台。然后选择卡彭做国家元首。正常来说，卡彭会在47年的1月去世，如果想让他提前去世，就在点完国策树（包括最底下的四个国策）后问要不要退休的事件中选择不要。\n\n问：卡彭的继承人？\n\n答：正常情况下，卡彭会在1947年的1月份死于梅毒，如果想让他提前去世，就点完国策树。在点的过程中卡彭会随着事件的触发逐渐发疯，点完后，会出一事件，问要不要让卡彭退休。同意的话，卡彭依旧会是国家的领导人，只是不再掌权，然后还是会在正常的死亡时间去世。拒绝的话，卡彭就会被刺杀，提前解锁继承人路线。\n\n卡彭去世后就可以走继承人路线了，然后在卢西亚诺、迪林杰、尼蒂、霍法、邦妮和克莱德中选一个。\n\n要选托里奥，先选卢西亚诺，再让托里奥上台。\n\n要选里卡，先选尼蒂，然后再让里卡上台，并引出新人物海米·韦斯。继续走里卡线，韦斯会政变，然后勒内·贝尔伯努瓦会登场。走邦妮和克莱德线，然后贝尔伯努瓦又会政变。\n\n卡彭的儿子阿尔伯特·弗朗西斯·卡彭和卡彭的哥哥拉尔夫·卡彭是尼蒂线和迪林杰线的可选领导人。\n\n“美男子”弗洛伊德是迪林杰线、尼蒂线、霍法线、西维线、邦妮和克莱德线的可选领导人。\n\n西维可以征服世界上所有的海盗地区，例如南海、越南、北非、马达加斯加、马来群岛、加勒比等。\n\n贝尔伯努瓦是第三国际派，但也能征服美洲。\n\n其余所有人都能征服整个美洲、加勒比海和菲律宾，也就是所谓的“美利坚帝国”的全部领土。\n\n所有人都能征服黑手党的意大利老家。\n\n所有人都能创建老大轴心，不过贝尔伯努瓦会自动加入第三国际，霍法则可以选择加入第三国际、布哈林的俄国或者赫鲁晓夫的乌克兰。"
+ guides.32.d:0 "问：卡彭的联合工团？\n\n答：内战期间，接受卡彭的支援。战时不要换海伍德，战后选举极权人上台。然后选择卡彭做国家元首。正常来说，卡彭会在47年的1月去世，如果想让他提前去世，就在点完国策树（包括最底下的四个国策）后问要不要退休的事件中选择不要。\n\n问：卡彭的继承人？\n\n答：正常情况下，卡彭会在1947年的1月份死于梅毒，如果想让他提前去世，就点完国策树。在点的过程中卡彭会随着事件的触发逐渐发疯，点完后，会出一事件，问要不要让卡彭退休。同意的话，卡彭依旧会是国家的领导人，只是不再掌权，然后还是会在正常的死亡时间去世。拒绝的话，卡彭就会被刺杀，提前解锁继承人路线。\n\n卡彭去世后就可以走继承人路线了，然后在卢西亚诺、迪林杰、尼蒂、霍法、邦妮和克莱德中选一个。\n\n要选托里奥，先选卢西亚诺，再让托里奥上台。\n\n要选里卡，先选尼蒂，然后再让里卡上台，并引出新人物海米·韦斯。继续走里卡线，韦斯会政变，然后勒内·贝尔伯努瓦会登场。走邦妮和克莱德线，然后贝尔伯努瓦又会政变。\n\n卡彭的儿子阿尔伯特·弗朗西斯·卡彭和卡彭的哥哥拉尔夫·卡彭是尼蒂线和迪林杰线的可选领导人。\n\n“美男子”弗洛伊德是迪林杰线、尼蒂线、霍法线、西维线、邦妮和克莱德线的可选领导人。\n\n西维可以征服世界上所有的海盗地区，例如南海、越南、北非、马达加斯加、马来群岛、加勒比等。\n\n贝尔伯努瓦是第三国际派，但也能征服美洲。\n\n其余所有人都能征服整个美洲、加勒比海和菲律宾，也就是所谓的“美利坚帝国”的全部领土。\n\n所有人都能征服黑手党的意大利老家。\n\n所有人都能创建老大轴心，不过贝尔伯努瓦会自动加入第三国际，霍法则可以选择加入第三国际、布哈林的俄国或者赫鲁晓夫的乌克兰。"
  guides.33.t:0 "联合工团指南"
  guides.33.d:0 "问：如何玩到洛夫斯通的社会主义路线？\n\n答：先走伯纳姆线（详见第一部分的指南），点度假的决议，选洛夫斯通当继承人，或完成“大陆社会主义社团”的国策后，等个大概三个月会弹出一个关于洛夫斯通的事件。选择不增加监控他就会政变。若选择增加监控，你也可以在之后的事件中选什么也不做来让他政变，也可以阻止他，让伯纳姆继续当总统\n\n问：如何玩到斯科特技官路线？\n\n答：走洛夫斯通线，完成他的国策，等清事件“清洗右翼反对派”，选择清洗斯科特，斯科特会逃亡。事件“发现敌人”里选择不埋伏他，他就会政变。然后在后续的选举事件中选择斯科特。马里恩·金·哈伯特可以在斯科特公开演讲的事件后上任。（不影响路线内容）斯科特技官线可以干爆全世界，或是只干爆北美。你还可以建立独特的技官主义傀儡国！（美国、南美、大洋洲、亚洲、欧洲和非洲）\n\n问：如何玩到勒布的大陆技官委员会乌托邦技官主义路线？\n\n答：先走斯科特线，然后在选举中选择勒布即可。勒布线可以获得许多优秀的领导人，包括海明威还有技官国会，以及其他你在征服美国各地时可以找到的人类群星，但你只能选择一个人成为国家领导人。其余的都只能成为部长。战争线和斯科特一样，但有独特的国旗和国家名字。"
  guides.32.a:0 "哇哦"
@@ -305,7 +305,7 @@
  guides.74.a:0 "哇哦"
  guides.74.b:0 "看看别的路线指南"
  guides.75.t:0 "新英格兰指南"
- guides.75.d:0 "问：洛夫克拉夫特的新英格兰？\n\n答：先游玩加拿大，然后占领新英格兰之后触发事件，选择“设立总督”的选项，然后市民会起义进攻政府，在进攻事件中让市民胜利，然后洛夫克拉夫特会在几天后上台。\n\n问：君主制新英格兰？\n\n答：和洛夫克拉夫特一样，但让市民进攻政府的企图失败。\n\n问：华盛顿派和精英掌权？\n\n答：走君主制路线，然后选择不安抚本地精英，然后完成“赶跑红衫军”国策，这样就会触发关于美利坚君主制主义者的事件，不要选“我有个问题”这个选项。起义之后一个月，就会触发关于君主制主义者企图夺权的事件，给他们权力。再等一段时间，就会有事件问你选择谁来加冕。如果你想选华盛顿派，那就选择他们。如果你想选肯尼迪或者阿斯特，那就选他们吧。\n\n问：新英格兰救国军政府？\n\n答：与上一条路线的玩法相同，但不要让君主制主义者掌权。\n\n问：除贵格会外的左翼新英格兰（亲工团/莱蒙德）？\n\n答：跟着上面的指南让新英格兰独立，在选举民主党派后的事件“大罢工！”中选择“这算不上什么严重威胁！”之后若选择强硬派，则会被美团吞并，选其它的则是莱蒙德的贝拉米自然乌托邦社会主义线。\n\n问：莱蒙德继承者？\n\n答：走莱蒙德路线，完成国策树。一百天后，将触发三K党刺杀他的事件。让他们成功。（或者你也可以一直等到1944年他OTL的死期！）然后你就可以解锁继承者国策树了。\n\n问：洛夫克拉夫特的继承者？\n\n答：玩新英格兰，完成疯狂国度国策，一百天后爱手艺将会死去，解锁继承者国策树\n\n问：左翼洛夫克拉夫特？\n\n答：先按照上文走继承者国策树，不要废除种族法，继续完成种族法问题国策，对于目击洛夫克拉夫特的事件持续选择调查，直到他最终归来。（废除种族法或者不调查他可以让你继续完成继任者路线）\n\n问：詹姆斯·迈克尔·柯利的反洛夫克拉夫特政变？\n\n答：先正常走洛夫克拉夫特线，在点粉碎爱尔兰共和军的国策前先点出国策“看一切燃烧”，之后柯利就会发动政变。这条线使用常规的社保线国策树，不过之后也可以正常举行选举，或操纵选举结果，建立新爱尔兰。"
+ guides.75.d:0 "问：洛夫克拉夫特的新英格兰？\n\n答：先游玩加拿大，然后占领新英格兰之后触发事件，选择“设立总督”的选项，然后市民会起义进攻政府，在进攻事件中让市民胜利，然后洛夫克拉夫特会在几天后上台。\n\n问：君主制新英格兰？\n\n答：和洛夫克拉夫特一样，但让市民进攻政府的企图失败。\n\n问：华盛顿派和精英掌权？\n\n答：走君主制路线，然后选择不安抚本地精英，然后完成“赶跑红衫军”国策，这样就会触发关于美利坚君主制主义者的事件，不要选“我有个问题”这个选项。起义之后一个月，就会触发关于君主制主义者企图夺权的事件，给他们权力。再等一段时间，就会有事件问你选择谁来加冕。如果你想选华盛顿派，那就选择他们。如果你想选肯尼迪或者阿斯特，那就选他们吧。\n\n问：新英格兰救国军政府？\n\n答：与上一条路线的玩法相同，但不要让君主制主义者掌权。\n\n问：除贵格会外的左翼新英格兰（亲工团/莱蒙德）？\n\n答：跟着上面的指南让新英格兰独立，在选举民主党派后的事件“大罢工！”中选择“这算不上什么严重威胁！”之后若选择强硬派，则会被美团吞并，选其它的则是莱蒙德的贝拉米自然乌托邦社会主义线。\n\n问：莱蒙德继承者？\n\n答：走莱蒙德路线，完成国策树。一百天后，将触发三K党刺杀他的事件。让他们成功。（或者你也可以一直等到1944年他OTL的死期！）然后你就可以解锁继承者国策树了。\n\n问：洛夫克拉夫特的继承者？\n\n答：玩新英格兰，完成疯狂国度国策，一百天后爱手艺将会死去，解锁继承者国策树\n\n问：左翼洛夫克拉夫特？\n\n答：先按照上文走继承者国策树，不要废除种族法，继续完成种族法问题国策，对于目击洛夫克拉夫特的事件持续选择调查，直到他最终归来。（废除种族法或者不调查他可以让你继续完成继任者路线）\n\n问：詹姆斯·迈克尔·柯利的反洛夫克拉夫特政变？\n\n答：先正常走洛夫克拉夫特线，在点粉碎爱尔兰共和军的国策前先点出“吸纳信众”，之后柯利就会发动政变。这条线使用常规的社保线国策树，不过之后也可以正常举行选举，或操纵选举结果，建立新爱尔兰。"
  guides.75.a:0 "哇哦"
  guides.75.b:0 "看看别的路线指南"
  YUN_guidesnum:0 "§C滇系军阀§!有§G1§!条路线指南。"
@@ -319,11 +319,11 @@
  KUB_guidesnum:0 "§C库班§!有§G1§!条路线指南。"
  MTR_guidesnum:0 "§C山地共和国§!有§G1§!条路线指南。"
  guides.76.t:0 "红俄指南"
- guides.76.d:0 "问：如何玩到红俄？（提示：你必须在通过宪法后的苏维埃紧急委员会上选择一个政党，委员会才会闭幕）\n答：有两种方法。\n一、不举行提前选举，让科尔尼洛夫发动政变，然后在接下来的事件中选择“权力归于劳动者”，此一方法会引爆内战。\n二、选人民社会党、孟什维克或社会革命党上台，三者的初始国策树结束时都可以选择转红俄。\n\n问：布尔什维克？\n答：让科尔尼洛夫发动政变，然后在接下来的事件中选择“权力归于劳动者”，赢得内战，“二城一党”事件把人民社会党逐出人民阵线，“共党骚动”事件选第二个，不要关停革命委员会，这样布尔什维克就会发动政变。\n\n问：我怎样才能解锁布哈林继承人的国策树？\n答：变身红俄，走布哈林路线，维持新经济政策，重建苏联，然后等布哈林去世（大约在重建苏联后的一年到一年半）。苏维埃大会将在一段时间内成为领导人，在一些事件（间隔颇长）之后，你将能够在国家工团主义的库兹涅佐夫、布哈林主义的柯西金或列宁主义的柳廷之间进行选择，解锁他们各自的国策树。\n\n问：我如何游玩菲什曼的契卡派政变或法制派反政变？\n答：变身俄罗斯社会主义共和国，选择左翼社革的领导人，点击“废除契卡”的国策，等到菲什曼和契卡政变的事件时，选择让他们获胜，契卡国策树就会解锁。请注意，菲什曼并不是马上就能成为领导人，他是在完成“重启征兵”的国策后才成为领导人。或在政变事件的后续中，选择让法制派获胜，就可以解锁法制派。\n\n问：我怎样才能游玩极权主义者萨文科夫？\n答：引发内战，让左翼社会革命党领导革命，当萨文科夫提出帮助时，选择接受。赢得内战，继续左翼社革路线，发动契卡政变（菲什曼），完成“对抗暴君的战争”的国策。只有在萨文科夫在内战期间加入你的两到三年后，当你用菲什曼完成国策时，才会出现一个让萨文科夫成为领导人的事件，所以你应该在事件被触发前完成左翼社会革命党契卡派路线，否则就玩不了。（没有新国策树）\n\n问：朱可夫/图哈切夫斯基/伏龙芝？\n答：内战期间接受图哈切夫斯基和伏龙芝。走布哈林线完成国策“新型政党”或者走左翼社革线完成国策“革命先锋”，不要理会赤色热月。若叶戈罗夫政变，那么在“与军队对峙”事件中选择“理应立即逮捕图哈切夫斯基！”。若华西列夫斯基政变，则在上述事件中选择“理应立即逮捕叶戈罗夫！”。"
+ guides.76.d:0 "问：如何玩到红俄？（提示：你必须在通过宪法后的苏维埃紧急委员会上选择一个政党，委员会才会闭幕）\n答：有两种方法。\n一、不举行提前选举，让科尔尼洛夫发动政变，然后在接下来的事件中选择“权力归于人民”，此一方法会引爆内战。\n二、选人民社会党、孟什维克或社会革命党上台，三者的初始国策树结束时都可以选择转红俄。\n\n问：布尔什维克？\n答：让科尔尼洛夫发动政变，然后在接下来的事件中选择“权力归于人民”，别跟萨文科夫结盟，赢得内战，“二城一党”事件把人民社会党逐出人民阵线，“共党骚动”事件选第二个，不要关停革命委员会，这样布尔什维克就会发动政变，必须在内战期间完成以上操作。\n\n问：我怎样才能解锁布哈林继承人的国策树？\n答：变身红俄，走布哈林路线，维持新经济政策，重建苏联，然后等布哈林去世（大约在重建苏联后的一年到一年半）。苏维埃大会将在一段时间内成为领导人，在一些事件（间隔颇长）之后，你将能够在国家工团主义的库兹涅佐夫、布哈林主义的柯西金或列宁主义的柳廷之间进行选择，解锁他们各自的国策树。\n\n问：我如何游玩菲什曼的契卡派政变或法制派反政变？\n答：变身俄罗斯社会主义共和国，选择左翼社革的领导人，点击“废除契卡”的国策，等到菲什曼和契卡政变的事件时，选择让他们获胜，契卡国策树就会解锁。请注意，菲什曼并不是马上就能成为领导人，他是在完成“重启征兵”的国策后才成为领导人。或在政变事件的后续中，选择让法制派获胜，就可以解锁法制派。\n\n问：我怎样才能游玩极权主义者萨文科夫？\n答：引发内战，让左翼社会革命党领导革命，当萨文科夫提出帮助时，选择接受。赢得内战，继续左翼社革路线，发动契卡政变（菲什曼），完成“对抗暴君的战争”的国策。只有在萨文科夫在内战期间加入你的两到三年后，当你用菲什曼完成国策时，才会出现一个让萨文科夫成为领导人的事件，所以你应该在事件被触发前完成左翼社会革命党契卡派路线，否则就玩不了。（没有新国策树）\n\n问：朱可夫/图哈切夫斯基/伏龙芝？\n答：内战期间接受图哈切夫斯基和伏龙芝。走布哈林线完成国策“新型政党”或者走左翼社革线完成国策“革命先锋”，不要理会赤色热月。若叶戈罗夫政变，那么在“与军队对峙”事件中选择“理应立即逮捕图哈切夫斯基！”。若华西列夫斯基政变，则在上述事件中选择“理应立即逮捕叶戈罗夫！”。"
  guides.76.a:0 "哇哦"
  guides.76.b:0 "查看新编布布/安人指南"
  guides.77.t:0 "布尔什维克/安那其指南"
- guides.77.d:0 "问：如何玩到布布/安人？\n答：走内战路线，“二城一党”事件中把人民社会党逐出人民阵线，“共党骚动”事件选第二个，不要关停革命委员会。\n\n要走安人路线的话，就在布布路线中镇压农民起义，“占领彼得格勒港口”事件中采取守势。\n\n问：布布的各位领导人？\n答：要留任季诺维也夫的话，就在“布拉贡拉沃夫的第一步”事件中选“又是红色恐怖？”。至于其他人，就选另一个选项，并且在演讲之前完成国策“压制契卡”。\n\n克列斯廷斯基，让政治局中的左派影响力最高。\n莫洛托夫，让政治局中的强硬派影响力最高。\n卡冈诺维奇，先让莫洛托夫上台，然后在“卡冈诺维奇的活动”事件中选“推举卡冈诺维奇”。\n布拉贡拉沃夫，先让克列斯廷斯基或莫洛托夫上台，然后在“布拉贡拉沃夫变得太过危险”事件中选“布拉贡拉沃夫已经证明了自己的忠心……”。\n亚戈达，先让布拉贡拉沃夫上台，完成一次大清洗，然后在“布拉贡拉沃夫的反苏阴谋”事件中选“亚戈达是更好的选择”。\n叶若夫，先让克列斯廷斯基或莫洛托夫上台，然后选亚戈达，之后再用叶若夫换掉亚戈达。\n无产阶级文化派，让政治局中的布哈林派影响力最高。"
+ guides.77.d:0 "问：如何玩到布布/安人？\n答：走内战路线，别跟萨文科夫结盟，“二城一党”事件中把人民社会党逐出人民阵线，“共党骚动”事件选第二个，不要关停革命委员会，必须在内战期间完成以上操作。\n\n要走安人路线的话，就在布布路线中镇压农民起义，“占领彼得格勒港口”事件中采取守势。\n\n问：布布的各位领导人？\n答：要留任季诺维也夫的话，就在“布拉贡拉沃夫的第一步”事件中选“又是红色恐怖？”。至于其他人，就选另一个选项，并且在演讲之前完成国策“压制契卡”。\n\n克列斯廷斯基，让政治局中的左派影响力最高。\n莫洛托夫，让政治局中的强硬派影响力最高。\n卡冈诺维奇，先让莫洛托夫上台，然后在“卡冈诺维奇的活动”事件中选“推举卡冈诺维奇”。\n布拉贡拉沃夫，先让克列斯廷斯基或莫洛托夫上台，然后在“布拉贡拉沃夫变得太过危险”事件中选“布拉贡拉沃夫已经证明了自己的忠心……”。\n亚戈达，先让布拉贡拉沃夫上台，完成一次大清洗，然后在“布拉贡拉沃夫的反苏阴谋”事件中选“亚戈达是更好的选择”。\n叶若夫，先让克列斯廷斯基或莫洛托夫上台，然后选亚戈达，之后再用叶若夫换掉亚戈达。\n无产阶级文化派，让政治局中的布哈林派影响力最高。"
  guides.77.a:0 "哇哦"
  guides.79.t:0 "哥斯达黎加指南"
  guides.79.d:0 "问：哥斯达黎加的中美洲咖啡公司路线？\n\n答：走社民线，在决议的机制里提升中美洲咖啡公司影响力（在意识形态饼图中，中美洲咖啡公司是威民）。影响力超50%后，便可解锁中美洲咖啡公司的第一个国策。完成该国策中美洲咖啡公司就会发动政变。最后哥斯达黎加可以由奥古斯特·威廉（中美洲德意志帝国）/理事会（企业国家）统治。"
@@ -576,6 +576,10 @@
  guides.13.d:0 "问：国民党左派？\n\n答：沈鸿英死后，在李宗仁入侵事件中选择出兵迎战。\n在梧州沦陷事件中选择守住侧翼。\n在陈铭枢的决定事件中选择开始行动。这样可以避免内战。\n在国民党领导人会面事件中选择陈铭枢。\n\n问：联省派？\n\n答：在李宗仁入侵事件中选择保卫梧州。\n在焦头烂额事件中随意选择。选择撤退将使广东控制梧州。\n在陈铭枢的决定事件中选择李宗仁不过是一个骗子强盗。\n在粤桂战争中站在陈炯明一边。\n\n问：商团、旧桂系、百色起义？\n\n答：在李宗仁入侵事件中选择出兵迎战。\n在梧州沦陷事件中选择增援马济。\n在南宁战役事件中随意选择。选择求援将使广东控制桂林。\n如果要进入百色起义就在起义事件中让广西起义成功，然后打内战。\n如果要进入商团或者旧桂系，就让起义失败。在守灵事件中选择随从被枪杀。\n在陈炯明遇刺事件中选择陈廉伯，然后在粤桂战争中站在他一边，旧桂系就选作为广西打内战。随后赢得内战即可。\n\n问：新桂系？\n\n答：同国民党左派路线，但在国民党领导人会面事件中选择李宗仁。或者让李宗仁入侵成功，然后内战选广西。"
  guides.13.a:0 "去中华民国界面"
  guides.13.b:0 "帅到"
+ guides.1002.t:0 "中华民国指南"
+ guides.1002.d:0 "问：军政府/文官政府？\n\n答：首先在统一前让新桂系上台，然后完成国策“宣布召开国民党全国代表大会”，在“大会上的争吵”事件中如果后续想玩军政府就选站在总司令一边，想玩文官政府就选站在行政院一边，然后打赢政治擂台即可解锁后续国策。\n\n问：胡汉民/居正/孙科/张群/蒋经国/滕杰/李石曾/严家淦？\n\n答：让文官政府打赢政治擂台，然后大选中选你想玩的那个。\n\n问：白崇禧/蒋经国/家独李宗仁？\n\n答：让军政府打赢政治擂台，然后在疲倦的总司令中选择不让李宗仁退休即可解锁家独路线。选择退休后续事件中就可以选择白崇禧或蒋经国上台。\n\n问：陈果夫/蒋纬国/宋子文？\n\n答：让蒋经国上台，在完成他的最后一个国策后选择不再继任，同时在安抚军队事件中选择盯紧他们，之后就可以选你想玩的那个上台。反之白崇禧就会政变。"
+ guides.1002.a:0 "返回"
+ guides.1002.b:0 "帅到"
  guides.55.t:0 "使馆城市指南"
  guides.55.d:0 "问：黑社会/商人/天主教教会/警察/沪民？\n\n答：让使馆城市破产，然后在上海火并的事件中选择你想要玩的势力获胜。\n\n问：总工会/左翼作家联盟/俄共？\n\n答：方法一：在黑色星期一中，不要对工人罢工妥协，然后让总工会。接下来的选举选你想玩的那个。\n方法二：让使馆城市破产，然后在上海火并的事件中选择总工会获胜。接下来的选举选你想玩的那个。"
  guides.55.a:0 "帅到"
@@ -603,10 +607,6 @@
  guides.1001.d:0 "问：彭德怀？\n\n答：统一前的工团路线中让彭德怀上台，然后在政协事件中维持军管。\n\n问：邓小平、高岗、刘少奇、周恩来、陈云、习仲勋、胡耀邦？\n\n答：在政协会议选举事件链里面选就完事了，让任意一派支持度达到最高。如果谁都没有达成胜出林伯渠就会上任（没有专属国策）。其中邓小平-极权派-极权主义，刘少奇、高岗-正统派-工团主义，陈云、周恩来-技官派-激进社会主义，习仲勋、胡耀邦-市场派-社会自由主义。\n\n问：特科政变？\n\n答：有两种方式。\n 第一种是让邓小平上台开启整风然后一直扩大化，最后康生就会政变，但是这种方式只能让康生上台。\n 第二种则是让邓小平、高岗、周恩来其一上台，完成改组中社部后杀掉汪精卫、胡汉民、同意戴笠加入、杀掉周佛海、不给特科涨工资。最后特科就会政变，你可以选择想要的那位上台。\n 不用担心记不住，政变链的选项内会有提示的。\n\n问：钱学森/郭沫若/陈毅？\n\n答：让周恩来上台，组建中科院，然后选你想要上台的那位当院长，在完成周恩来的最后一个国策的一段时间后，就会出放权事件，选择废除对应的院长就会上台。不废除，周恩来就会换成技官社会主义继续执政（没有专属国策）\n\n问：林彪、贺龙、叶剑英的三头同盟？\n\n答：用第二种方式让中社部上台，在大清洗决议中不断杀人，且中途事件也不要停手，军队就会政变。在之后的三头同盟决议中让你想玩的那个威望超过80%。\n\n问：毛泽东？\n\n答：在除三头同盟任何PROC路线中让土地改革§R严重失败§!"
  guides.1001.a:0 "返回"
  guides.1001.b:0 "帅到"
- guides.1002.t:0 "中华民国"
- guides.1002.d:0 "问：军政府/文官政府？\n\n答：首先在统一前让新桂系上台，然后完成国策“宣布召开国民党全国代表大会”，在“大会上的争吵”事件中如果后续想玩军政府就选站在总司令一边，想玩文官政府就选站在行政院一边，然后打赢政治擂台即可解锁后续国策。\n\n问：胡汉民/居正/孙科/张群/蒋经国/滕杰/李石曾/严家淦？\n\n答：让文官政府打赢政治擂台，然后大选中选你想玩的那个。\n\n问：白崇禧/蒋经国/家独李宗仁？\n\n答：让军政府打赢政治擂台，然后在疲倦的总司令中选择不让李宗仁退休即可解锁家独路线。选择退休后续事件中就可以选择白崇禧或蒋经国上台。\n\n问：陈果夫/蒋纬国/宋子文？\n\n答：让蒋经国上台，在完成他的最后一个国策后选择不再继任，同时在安抚军队事件中选择盯紧他们，之后就可以选你想玩的那个上台。反之白崇禧就会政变。"
- guides.1002.a:0 "返回"
- guides.1002.b:0 "帅到"
  SHC_guidesnum:0 "§C上海§!有§G2§!条路线指南。"
  guides.1003.t:0 "上海特别市指南"
  guides.1003.d:0 "问：黑社会/商人/天主教教会/警察/沪民？\n\n答：让使馆城市破产，然后在上海火并的事件中选择你想要玩的势力获胜。\n\n问：总工会/左翼作家联盟/流亡俄共？\n\n答：1、在黑色星期一中，不要对工人罢工妥协，然后让总工会/左联起义成功。2.让使馆城市破产，然后在上海火并的事件中选择总工会获胜。在接下来的选举事件中选你想玩的那个。"
