--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,7 @@
 -学习中亚先进经验为天主教线添加了统一后的短暂国策
--修复了天主教线无法对施鹤等地传教的BUG，并为部分地区添加了传教事件，并增加了几个新决议
+-为上海天主教线添加了统一超事件
+-修复了天主教线无法对施鹤等地传教的BUG，为部分地区添加了传教事件，并增加了几个新决议
+-修复了一些与旧皖系相关的文案、事件效果BUG
 -修复了两广路线指南错误的BUG
 -修复了一部分图像错误
 -添加了更多趣味事件，并为部分事件添加了一些配图
