--- a/localisation/KR_Shandong_l_simp_chinese.yml
+++ b/localisation/KR_Shandong_l_simp_chinese.yml
@@ -430,6 +430,7 @@
  SQI_peng_ji_di_zhi:0 "抨击帝制"
  SQI_xuan_yang_xian_zheng:0 "宣扬宪政"
  SQI_yan_lun_guan_zhi:0 "言论管制"
+ SQI_remove_KMT_state_targeted_decision:0 "清除[FROM.GetName]的国民党残余份子"
 
  SQI_agricultural_reform_completed_flag: "§Y粮食危机已经解除§!"
  SQI_wan_victory_tooltip: "§Y段祺瑞§W终于完成了他的§G夙愿§W"
@@ -1159,7 +1160,7 @@
  sqiwan.11.d:0 "张作霖发来了回信，他并没有直接表示对之后战事的看法，只是发来了几箱枪。无论如何，我们只是可以相信他应该不会再这场战争中站在我们的对立面。哪怕他们就这样保持中立都是最好的。"
  sqiwan.11.a:0 "没有永恒的敌人"
  sqiwan.12.t:0 "渔工案"
- sqiwan.12.d:0 "前些时日，青岛德商经营的西村洋行(经营渔业)，突然派人到本埠区赵家村通知该行渔工赵玉连之亲属，声称“赵玉连于20日夜间在船上跌伤身死”，并令赶往领尸掩埋。赵玉连时年26岁，父母华迈，哥哥有病，弟弟尚幼，“数口之家胥赖其一人雇佣为生”，生活十分贫苦，月初，赵玉连为生活所迫，到青岛西村洋行充当渔工。该行有两艘捕鱼小轮船，赵玉连系随轮出海捕鱼。赵玉连之亲属闻此盟耗，明白赵玉连死得不明，于是立报水上警察分所，转报育岛地方检察厅莅场会验，又邀请青岛律师公会会长等人一同上船检视，则见死者赵王连尸体业经该船德国雇员移卧榻上，眼眶口鼻有血，左腮青赤肿起，面目肿胀，下颌有勒痕一道，赤晕血荫，两手曲拳，肛腹膨胀，显然是勒死的，根本不是‘跌伤致死’。他的亲属便向商埠局诉请提出交涉间，谁知道德国人竟然在28日夜间竞将死者尸体擅由该船移置西村洋行院内，该船开驶出港远飏。德领事并用恫吓言词，迭催尸兄赵xx领尸理葬”，企图速了此案，蒙混过关。\n\n德国人的残暴行径，激起青岛人民强烈愤慨。青岛市民公会，青岛中国青年会，青岛律师公会暨青岛即墨同乡会等团体，联合发表通电，要求南京当局与日方交涉，并号召各界“一致援助，务达惩凶、道歉、抚恤之目的。”"
+ sqiwan.12.d:0 "前些时日，青岛德商经营的西村洋行(经营渔业)，突然派人到本埠区赵家村通知该行渔工赵玉连之亲属，声称“赵玉连于20日夜间在船上跌伤身死”，并令赶往领尸掩埋。赵玉连时年26岁，父母华迈，哥哥有病，弟弟尚幼，“数口之家胥赖其一人雇佣为生”，生活十分贫苦，月初，赵玉连为生活所迫，到青岛西村洋行充当渔工。该行有两艘捕鱼小轮船，赵玉连系随轮出海捕鱼。赵玉连之亲属闻此盟耗，明白赵玉连死得不明，于是立报水上警察分所，转报育岛地方检察厅莅场会验，又邀请青岛律师公会会长等人一同上船检视，则见死者赵王连尸体业经该船德国雇员移卧榻上，眼眶口鼻有血，左腮青赤肿起，面目肿胀，下颌有勒痕一道，赤晕血荫，两手曲拳，肛腹膨胀，显然是勒死的，根本不是‘跌伤致死’。他的亲属便向商埠局诉请提出交涉间，谁知道德国人竟然在28日夜间竞将死者尸体擅由该船移置西村洋行院内，该船开驶出港远飏。德领事并用恫吓言词，迭催尸兄赵xx领尸理葬”，企图速了此案，蒙混过关。\n\n德国人的残暴行径，激起青岛人民强烈愤慨。青岛市民公会，青岛中国青年会，青岛律师公会暨青岛即墨同乡会等团体，联合发表通电，要求南京当局与徳方交涉，并号召各界“一致援助，务达惩凶、道歉、抚恤之目的。”"
  sqiwan.12.a:0 "必须严查到底"
  sqiwan.12.b:0 "不过是起小案子"
  sqiwan.13.t:0 "德国水兵殴打车夫"
