--- a/localisation/KR_Shang_Hai_l_simp_chinese.yml
+++ b/localisation/KR_Shang_Hai_l_simp_chinese.yml
@@ -1658,6 +1658,9 @@
  Shchuming.12.t:0 "小摊贩"
  Shchuming.12.d:0 "陆长庚蹲在弄堂口，低头擦拭着摊位上的铜秤。夜幕降临，外滩的街头仍有人影穿梭，但更多的人选择早早归家，避免惹上不必要的麻烦。他卖烧饼，生意不好不坏，勉强糊口。可自从换了个政府之后，日子不知道为什么一天比一天难了起来。\n\n“陆先生，最近可有见到可疑之人？”声音从身后传来，带着几分冷漠。陆长庚抬头，看见一个穿着宪兵制服的翻译官，身后站着两个日本宪兵。他手指微微一紧，仍是低头擦着秤，慢吞吞地答：“小的...小的只管卖吃食，哪里见得什么可疑之人？”\n\n翻译官笑了笑，语气不急不缓：“陆先生，宪兵队很看重您的摊位，街口的人进进出出，您总能听见些动静。何况，我们知道，您有个儿子...”\n\n陆长庚的手顿住了。儿子陆文去年考入了辅仁中学，他拼了命省吃俭用供他读书，就是希望他不要走自己的老路。翻译官向前一步，压低声音道：“告诉我们，最近可有人来打探消息？若是配合，您的生意照常，家里人也能平安。”陆长庚陷入沉默，他不是没听说过，前几条弄堂里，有人因为‘知情不报’，一家人都被拖走了。可他也知道，前些天有个熟客，衣服破旧，眼神凌厉，问了他几句巡逻路线，第二天就听说政府的弹药库发生了爆炸。陆长庚把头埋得更低了些，缓缓擦去秤上的灰尘，像是在擦去什么无法言说的东西。\n\n“大人，小的真的只是个卖烧饼的。”他略带着些粗气缓缓开口，又将嘴角扯开，尴尬的笑着。翻译官盯着他，片刻后，轻轻点了点头。“希望如此。”他挥了挥手，宪兵们转身离开。陆长庚静静地坐了一会儿，手心满是冷汗。远处，街灯下的影子缓缓散去。风吹过摊位，烧饼的香气仍旧飘散在夜色里。"
  Shchuming.12.a:0 "未来，又会怎么样呢？他不知道..."
+ Shchuming.13.t:0 "清晨"
+ Shchuming.13.d:0 "灰色的晨雾笼罩着徐家汇天主教堂的尖顶，教堂的钟声一如既往地敲响了六下。张费诺神父站在圣坛前，手指轻拂过翻旧的《拉丁文圣经》。他低声念着祷文，却难以平息内心的不安。他知道，今天会有士兵来。过去几周，日本宪兵频频拜访，要他在“新上海大道政府”的广播中宣读支持声明，呼吁信徒服从新秩序。他拒绝了三次。第四次，他把请愿书丢进了教堂的火盆，灰烬随着香烛的烟雾飘散在空中。\n\n门外传来皮靴踩踏石阶的声音，沉重而坚定。门开的一刻，风掀动了他的法衣，宪兵冲进来，把他按倒在地。教堂里惊慌四起，一名年长的修女试图阻止他们，却被枪托推倒在祭坛前。当他被押上卡车时，费诺·张望向身后那高耸的十字架，冷风刺痛他的脸。他闭上双眼，嘴唇仍在默念祷词——对这个被占领城市的最后一次祝福。"
+ Shchuming.13.a:0 "他宁作但以理，不跪巴比伦的金像。"
 
 ###经济线
  LEC_xi_mie_huo_yan:0 "熄灭火焰"
